<resources>
    <string name="app_name">SubmissionIntermediate</string>
    <string name="input_email">Input Email</string>
    <string name="email">Email</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="or">or</string>
    <string name="insert_email">Insert Email</string>
    <string name="insert_password">Insert Password</string>
    <string name="email_false">Email is not correct</string>
    <string name="password_false">Password is not correct</string>
    <string name="input_password">Input Password</string>
    <string name="account_create"> Account Created</string>
    <string name="insert_name">Insert Name!</string>
    <string name="password_min">Password must have at least 6 characters</string>
    <string name="log_out">Log Out</string>
    <string name="story">Stories</string>
    <string name="input_name">Input Name</string>
    <string name="sign_in">Sign In</string>
    <string name="user">user</string>
    <string name="description">Description…</string>
    <string name="detail_photo">detail photo</string>
    <string name="email_not_format">Email isn\'t the right Format</string>
    <string name="email_used">Email has been Used</string>
    <string name="preferences">Preferences</string>
    <string name="token">Token</string>
    <string name="settings">Settings</string>
    <string name="add_story">Add Story</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload">upload</string>
    <string name="photo_preview">photo preview</string>
    <string name="new_story">New Story</string>
    <string name="no_permission">Permission not granted</string>
    <string name="upload_error">Upload Error</string>
    <string name="no_description">Description is required to upload</string>
    <string name="no_photo">Photo is required to upload</string>
    <string name="empty">empty</string>
    <string name="upload_sucess">Upload Success</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="login_success">Login Successful</string>
    <string name="login_fail">Login Failed</string>
    <string name="upload_fail">Upload Failed</string>
    <string name="retry">Retry</string>
</resources>