<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detailPhoto"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_margin="24dp"
            android:contentDescription="@string/detail_photo"
            android:transitionName="photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detailTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/user"
            android:textSize="24sp"
            android:textStyle="bold"
            android:transitionName="user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailPhoto" />

        <TextView
            android:id="@+id/detailTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:transitionName="description"
            app:layout_constraintTop_toBottomOf="@+id/detailTextUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>